Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2022-08-16:

- Fixed an old bug in history expansion (set -H) where any use of the history
  comment character caused processing to be aborted as if it were an invalid
  history expansion. (On 2022-01-24 the history comment character was set to
  '#' instead of being disabled by default, which exposed this bug.)

2022-08-08:

- Release 1.0.2.

2022-08-06:

- Fixed an interactive shell crashing on redefining, then unsetting one of
  the predefined aliases.

- Fixed an interactive shell crashing on redefining one of the predefined
  aliases, then executing a shell script that does not start with a #! path.

2022-08-05:

- Reverted a buggy exec optimisation introduced on 2022-06-18. It is known
  to make the build scripts of GNU binutils produce corrupted results.

- Release 1.0.1.

2022-08-01:
   _        _        ___ _____                          ___   ___   ___
  | | _____| |__    / _ \___ / _   _   _   _ __ ___    / / | / _ \ / _ \
  | |/ / __| '_ \  | (_) ||_ \| | | |_| |_| '_ ` _ \  / /| || | | | | | |
  |   <\__ \ | | |  \__, |__) | |_| |_   _| | | | | |/ / | || |_| | |_| |
  |_|\_\___/_| |_|    /_/____/ \__,_| |_| |_| |_| |_/_/  |_(_)___(_)___/

- Exactly ten years after ksh 93u+ 2012-08-01, we now have a new ksh release.
  Many thanks to all the direct and indirect contributors for their hard work!

2022-07-28:

- Fixed BUG_IFSGLOBS ("$*" does pattern matching if the first character of
  $IFS is a wildcard).

2022-07-27:

- Fixed a bug introduced on 2022-02-08 where $PPID was incorrect when a script
  without a #! path was executed.

- Fixed a completion bug in the vi line editor. It now correctly completes
  the sole member of a directory when tab is pressed immediately after /.
  Thanks to K. Eugene Carlson for the report and the fix.

2022-07-26:

- Fixed incorrect handling of initial zeros in test/[ and [[ arithmetic